tests/codegen/fail/object/argument_wrong_default_array.stderr
error[E0277]: the trait bound `[bool; 2]: From<[bool; 3]>` is not satisfied
 --> fail/object/argument_wrong_default_array.rs:5:1
  |
5 | #[graphql_object]
  | ^^^^^^^^^^^^^^^^^ the trait `From<[bool; 3]>` is not implemented for `[bool; 2]`
  |
  = help: the following other types implement trait `From<T>`:
            <&'a [ascii::ascii_char::AsciiChar] as From<&'a ascii::ascii_str::AsciiStr>>
            <&'a [u32; 4] as From<&'a ppv_lite86::x86_64::vec128_storage>>
            <&'a [u8] as From<&'a ascii::ascii_str::AsciiStr>>
            <&'a mut [ascii::ascii_char::AsciiChar] as From<&'a mut ascii::ascii_str::AsciiStr>>
            <&'input [u8] as From<gimli::read::endian_slice::EndianSlice<'input, Endian>>>
            <[T; 10] as From<(T, T, T, T, T, T, T, T, T, T)>>
            <[T; 11] as From<(T, T, T, T, T, T, T, T, T, T, T)>>
            <[T; 12] as From<(T, T, T, T, T, T, T, T, T, T, T, T)>>
          and $N others
  = note: required for `[bool; 3]` to implement `Into<[bool; 2]>`
  = note: this error originates in the attribute macro `graphql_object` (in Nightly builds, run with -Z macro-backtrace for more info)
